--- a/index.html
+++ b/index.html
@@ -104,4 +104,13 @@
         </div>
     </div>
 </body>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N65EGGM8MT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N65EGGM8MT');
+</script>
 </html>
